<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >
        <TextView
          android:id="@+id/text1"
          android:gravity="right|bottom"
          android:layout_width="match_parent"
          android:layout_height="0dp"
          android:layout_weight="1"
          android:text="@string/ttwo"
          android:hint="@string/ttwo"
          android:textSize="40sp"
        />
      <LinearLayout
         android:layout_weight="2"
         android:orientation="vertical"
         android:layout_width="match_parent"
         android:layout_height="0dp">
          <LinearLayout
         android:orientation="horizontal"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="1">

              <Button
                  android:id="@+id/btnno"
                  android:layout_width="0dp"
                  android:layout_height="match_parent"
                  android:layout_weight="1"
                  android:text="@string/one"
                  android:textSize="30sp" />
            <Button
                android:id="@+id/BtnRooting"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:text="@string/two"
                android:textSize="30sp"/>
            <Button
                android:id="@+id/BtnSquare"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:text="@string/three"
                android:textSize="30sp"/>

            <Button
                android:id="@+id/BtnReciprocal"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:text="@string/four"
                android:textSize="30sp"/>

    </LinearLayout>
        <LinearLayout
         android:orientation="horizontal"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="1">
        <Button
            android:id="@+id/BtnCE"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/five"
            android:textSize="30sp"/>
        <Button
            android:id="@+id/BtnC"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/six"
            android:textSize="30sp"/>
        <Button
            android:id="@+id/BtnBack"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/seven"
            android:textSize="30sp"/>
         <Button
            android:id="@+id/BtnDivide"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/eight"
            android:textSize="30sp"/>
    </LinearLayout>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">
            <Button
                android:id="@+id/Btn7"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:text="@string/nine"
                android:textSize="30sp"/>
            <Button
                android:id="@+id/Btn8"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:text="@string/ten"
                android:textSize="30sp"/>
            <Button
                android:id="@+id/Btn9"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="match_parent" 
                android:text="@string/eleven"
                android:textSize="30sp"/>
            <Button
                android:id="@+id/BtnMultiply"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:text="@string/twelve"
                android:textSize="30sp"/>
    </LinearLayout>
        <LinearLayout
         android:orientation="horizontal"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="1">
            <Button
                android:id="@+id/Btn4"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:text="@string/thirteen"
                android:textSize="30sp"/>
            <Button
                android:id="@+id/Btn5"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:text="@string/fourteen"
                android:textSize="30sp"/>
            <Button
                android:id="@+id/Btn6"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:text="@string/fifteen"
                android:textSize="30sp"/>
            <Button
                android:id="@+id/BtnMinus"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:text="@string/sixteen"
                android:textSize="30sp"
                />
     </LinearLayout>
        <LinearLayout
          android:orientation="horizontal"
          android:layout_width="match_parent"
          android:layout_height="0dp"
          android:layout_weight="1">
            <Button

                android:id="@+id/Btn1"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:text="@string/seventeen"
                android:textSize="30sp"/>
            <Button
                android:id="@+id/Btn2"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:text="@string/eighteen"
                android:textSize="30sp"/>
            <Button
                android:id="@+id/Btn3"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:text="@string/nineteen"
                android:textSize="30sp"/>
            <Button
                android:id="@+id/BtnPlus"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:text="@string/twenty"
                android:textSize="30sp"/>
    </LinearLayout>
        <LinearLayout
         android:orientation="horizontal"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="1">
            <Button
                android:id="@+id/BtnSign"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:text="@string/tone"
                android:textSize="30sp"/>
            <Button

                android:id="@+id/Btn0"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:text="@string/ttwo"
                android:textSize="30sp"/>
            <Button

                android:id="@+id/BtnPoint"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:text="@string/tthr"
                android:textSize="30sp"/>
            <Button
                android:id="@+id/BtnEqual"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:text="@string/tfou"
                android:textSize="30sp"/>
        </LinearLayout>
     </LinearLayout>
</LinearLayout>